Revert "openai added"
This reverts commit d3ae598a01a699469a079e6a2dab9716fd7ebfc5.